--- a/app/templates/profiles.html
+++ b/app/templates/profiles.html
@@ -20,16 +20,16 @@
     {% if name == "Jacen Barefoot" %}
       <h1 class="center"> {{name}} </h1>
        {% load static %} <img src="{% static "images/jacen.png" %}" class="img" />
-    <nav>
-      <h2>Bio: </h2>
-      <p class="one">I like to play Pokemon GO! Ayo</p>
-      <h2>Location:</h2>
-      <p class="one">Pontotoc City, MS</p>
-      <h2>Dream:</h2>
-      <p class="one">TO win a shiny Pokemon</p>
-      <h2>Job:</h2>
-      <p class="one">HomeTown Pizza</p>
-    </nav>
+      <div>
+        <h2>Bio: </h2>
+        <p class="one">I like to play Pokemon GO! Ayo</p>
+        <h2>Location:</h2>
+        <p class="one">Pontotoc City, MS</p>
+        <h2>Dream:</h2>
+        <p class="one">TO win a shiny Pokemon</p>
+        <h2>Job:</h2>
+        <p class="one">HomeTown Pizza</p>
+      </div>
     {% elif name == "Ethan Ward" or name == "Ethan"%}
     <h1 class="center"> {{name}} </h1>
      {% load static %} <img src="{% static "images/ehtan.jpg" %}" class="img2" />
