--- a/app/templates/page.html
+++ b/app/templates/page.html
@@ -8,6 +8,60 @@
     <link rel="stylesheet" href="{% static 'ourcss.css'%}">
   </head>
     <body>
+      {% if name == "Will Collins" %}
+        {% load static %} <img href="{% static 'images/Will Collins.png' %}">
+
+      {% elif name == "Justins Ashmore"%}
+        {% load static %}<img href="{% static 'images/Justin Ashmore.png' %}">
+
+      {% elif name == "Logan Coley"%}
+        {% load static %}<img href="{% static 'images/Logan Coley.jpeg' %}">
+
+      {% elif name == "Dylan Goad" %}
+        {% load static %}<img href="{% static 'images/Dylan Goad.png' %}">
+
+      {% elif name == "Daelan" %}
+        {% load static %}<img href="{% static 'images/Daelan.jpg' %}">
+
+      {% elif name == "Dylan Shipton" %}
+        {% load static %}<img href="{% static 'images/Dylan Shipton.png' %}">
+
+      {% elif name == "LOGAN T WILKINS" %}
+        {% load static %}<img href="{% static 'images/LOGAN T WILKINS.jpg' %}">
+
+      {% elif name == "Ethan Ward" %}
+        {% load static %}<img href="{% static 'images/Ethan Ward.png' %}">
+
+      {% elif name == "Jacen Barefoot" %}
+        {% load static %}<img href="{% static 'images/Jacen Barefoot.png' %}">
+
+      {% elif name == "Isaac" %}
+        {% load static %}<img href="{% static 'images/Isaac.png' %}">
+      
+      {% elif name == "Mariann"%}
+        {% load static %}<img href="{% static 'images/Mariann.JPEG' %}">
+
+      {% elif name == "Michelle Rankin" %}
+        {% load static %}<img href="{% static 'imaages/Michelle Rankin.jpg' %}">
+      
+      {% elif name == "Quinton Summerford" %}
+        {% load static %}<img href="{% static 'images/Quinton Summerford.png' %}">
+      
+      {% elif name == "Randy Trullet" %}
+        {% load static %}<img href="{% static 'images/Randy Trullet.png' %}">
+
+      {% elif name == "RJay Pickering" %}
+        {% load static %}<img href="{% static 'images/RJay.jpeg' %}">
+      
+      {% elif name == "Ryan Bennett" %}
+        {% load static %}<img href="{% static 'images/Ryan Bennett.jp' %}">
+
+      {% elif name == "Rylee Chisholm" %}
+        {% load static %}<img href="{% static 'images/Rylee Chisholm.png' %}">
+
+      
+
+      {% endif %}
       {% for student, info in students.items %}
         {% if student == name %}
         <h1>{{info.u_name}}</h1>
