--- a/app/templates/page.html
+++ b/app/templates/page.html
@@ -24,13 +24,13 @@
         {% load static %}<img src="{% static 'images/Daelan.jpg' %}">
 
       {% elif name == "Dylan Shipton" %}
-        {% load static %}<img src="{% static 'images/Dylan Shipton.png' %}">
+        {% load static %}<img src="{% static 'images/Dylan SHipton.png' %}">
 
       {% elif name == "LOGAN T WILKINS" %}
         {% load static %}<img src="{% static 'images/LOGAN T WILKINS.jpg' %}">
 
       {% elif name == "Ethan Ward" %}
-        {% load static %}<img src="{% static 'images/Ethan Ward.png' %}">
+        {% load static %}<img src="{% static 'images/Ethan Ward.jpg' %}">
 
       {% elif name == "Jacen Barefoot" %}
         {% load static %}<img src="{% static 'images/Jacen Barefoot.png' %}">
