--- a/app/static/ourcss.css
+++ b/app/static/ourcss.css
@@ -14,3 +14,13 @@ h3 {
     margin-right: 250px;
 }
 
+.img {
+    width: 300px;
+    height: 200px;
+    border-radius: 70%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1em;
+    margin-top: -10px;
+}
